--- a/Style/style.css
+++ b/Style/style.css
@@ -7,7 +7,11 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
 body{
     height: 100vh;
     width: 100%;
-background: -moz-linear-gradient(
+}
+.background{
+    height: 100vh;
+    width: 100%;
+    background:-moz-linear-gradient(
     to bottom,
     rgb(136, 130, 130) 0,
     rgb(136, 130, 130) 80%,
