--- a/Style/style.css
+++ b/Style/style.css
@@ -11,7 +11,7 @@ body{
 .background{
     height: 100vh;
     width: 100%;
-    background:-moz-linear-gradient(
+    background:linear-gradient(
     to bottom,
     rgb(136, 130, 130) 0,
     rgb(136, 130, 130) 80%,
